--- a/ViccAdatbazis/Pages/Index.cshtml
+++ b/ViccAdatbazis/Pages/Index.cshtml
@@ -13,31 +13,10 @@
             <li>
                 <strong>@joke.Tartalom</strong><br />
                 <em>Feltöltő: @joke.Feltolto</em><br />
-                <span>Lájkok: @joke.Tetszik</span> | <span>Diszlájkok: @joke.NemTetszik</span><br />
-                <button onclick="vote(@joke.Id, 'like')">Tetszik</button>
-                <button onclick="vote(@joke.Id, 'dislike')">Nem tetszik</button>
+                Lájkok: <span id="likeDb">@joke.Tetszik</span> | <span>Diszlájkok: @joke.NemTetszik</span><br />
+                <button onclick="lajkolas(@joke.Id)">Tetszik</button>
+                <button onclick="lajkolas(@joke.Id, 'dislike')">Nem tetszik</button>
             </li>
         }
     </ul>
 </div>
-
-@section Scripts {
-    <script>
-        async function vote(jokeId, type) {
-            const response = await fetch(`/api/jokes/${jokeId}/vote`, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(type)
-            });
-
-            if (response.ok) {
-                const updatedJoke = await response.json();
-                location.reload(); // Frissíti az oldalt, hogy az új adatok megjelenjenek
-            } else {
-                alert('Hiba történt a szavazás során.');
-            }
-        }
-    </script>
-}
